syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "dnf/proto/v1;basicv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "BasicTypesProto";

// 认证信息请求
message AuthInfoRequest {
  uint64 auth_index = 1;  // 认证索引
}

// 认证信息响应
message AuthInfoResponse {
  int32 error = 1;  // 错误码
}

// 基础角色信息
message BasicCharacterInfo {
  string m_guid = 1;  // 角色GUID
  string m_name = 2;  // 角色名称
}

// 基础聊天信息
message BaseChat {
  int32 type = 1;           // 类型
  uint64 charguid = 2;       // 角色GUID
  int32 level = 3;          // 等级
  string name = 4;           // 名称
  int32 job = 5;            // 职业
  int32 growtype = 6;        // 成长类型
  int32 secgrowtype = 7;     // 次要成长类型
  string chat = 8;           // 聊天内容
  int32 creditscore = 9;     // 信用分数
  int32 characterframe = 10; // 角色边框
  int32 chatframe = 11;      // 聊天边框
}
