syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "dnf/proto/v1;systemv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "SystemTypesProto";

// 角色信息
message Actor {
  string accountkey = 1;   // 账户密钥
  int32 cera = 2;          // 钻石数量
  string charguid = 3;      // 角色GUID
  string name = 4;          // 角色名称
  string openid = 5;         // OpenID
  int32 sessionid = 6;      // 会话ID
  string userip = 7;         // 用户IP
  string version = 8;        // 版本号
  int32 worldid = 9;        // 世界ID
  int32 platid = 10;        // 平台ID
}

// 超链接数据
message HyperlinkData {
  uint64 index = 1;  // 索引
  bool bind = 2;     // 是否绑定
}

// 超链接系统消息子消息
message HyperlinkSystemMessageSub {
  string msg = 1;  // 消息内容
}

// 聊天基础信息
message ChatBase {
  int32 m_type = 1;                                    // 类型
  string m_msg = 2;                                    // 消息
  string m_voice = 3;                                   // 语音
  string m_voidcetime = 4;                              // 过期时间
  int32 hyperlinktype = 5;                               // 超链接类型
  int32 hyperlinksubtype = 6;                             // 超链接子类型
  repeated HyperlinkData hyperlinkdatas = 7;                 // 超链接数据
  repeated HyperlinkSystemMessageSub sub = 8;               // 子消息
}
